# HyperMemo

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  biome.json  firebase.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: RELEASE.md  admin-cli.md  design-style-guide.md  functions-architecture.md  privacy-policy.md
functions/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
pages/dashboard/: index.html
pages/popup/: index.html
scripts/: admin-stats.ts  manage-subscription.ts  resize_images.py
src/: index.css  manifest.ts
src/background/: index.ts
src/components/: BookmarkDetailView.tsx  ChatInput.css  ChatInput.tsx  ConfirmationModal.tsx  Drawer.css  Drawer.tsx  Favicon.tsx  Header.tsx  SubscriptionBadge.css  SubscriptionBadge.tsx  SubscriptionManager.css  SubscriptionManager.tsx  TagInput.tsx
src/content/: index.ts
src/contexts/: AuthContext.tsx  BookmarkContext.tsx  ThemeContext.tsx
src/services/: apiClient.ts  bookmarkService.test.ts  bookmarkService.ts  firebase.ts  mlService.ts  notesService.ts  ragService.ts
src/types/: bookmark.ts  messages.ts
src/utils/: chrome.ts  markdown.ts  summarize.ts
supabase/: config.toml
supabase/functions/: deno.json
supabase/migrations/: 20251203000000_enable_pgvector.sql  20251203000001_webhook_trigger.sql  20251203134100_set_prod_webhook_url.sql  20251203134500_allow_null_embedding.sql  20251203145000_cleanup_tags_cron.sql  20260105000000_robust_webhooks.sql
(+25 files in other folders)
