[project]
name = "hypermemo-functions"
version = "0.1.0"
description = "Firebase Functions backend for HyperMemo"
readme = "README.md"
authors = [
  { name = "HyperMemo" }
]
requires-python = ">=3.13"
dependencies = [
  "firebase-functions>=0.1.0",
  "firebase-admin>=6.4.0",
  "google-cloud-firestore>=2.19.0",
  "google-cloud-aiplatform>=1.70.0",
  "openai>=1.53.0",
  "functions-framework>=3.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hypermemo_functions"]
